cleans up various alignment and layout issues

--- a/public/resources/css/base/_type.scss
+++ b/public/resources/css/base/_type.scss
@@ -105,11 +105,17 @@ table th,
   font-weight: 400;
   opacity: .87;
   line-height: 28px;
+  padding: 0;
 
   &.is-plain {
     list-style-type: none;
     padding: 0px;
   }
+}
+
+.docs-content ul,
+.docs-content ol {
+  padding-left: ($unit * 4);
 }
 
 .l-sub-section p,
@@ -160,4 +166,13 @@ table td {
 .l-sub-section .text-aside,
 .docs-content .l-sub-section  aside {
   background: $snow;
+}
+
+.docs-content .card-row {
+  > div:first-child > .card {
+    margin-left: 0;
+  }
+  > div:last-child > .card {
+    margin-right: 0;
+  }
 }
