--- a/public/resources/css/module/_banner.scss
+++ b/public/resources/css/module/_banner.scss
@@ -6,7 +6,7 @@
 
 .banner {
   background: $mist;
-  padding: ($unit * 4) ($unit * 4) ($unit * 4) ($unit * 12);
+  padding: ($unit * 4) ($unit * 6);
   min-height: $unit * 12;
 
   @media handheld and (max-width: $phone-breakpoint),
